<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>opscloud</artifactId>
        <groupId>com.baiyi</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <!--        <project.version>0.0.4-SNAPSHOT</project.version>-->
        <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
    </properties>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>opscloud-ssh-server</artifactId>

    <dependencies>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-ssh-core</artifactId>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
            <version>6.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
            <version>6.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>6.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline-terminal-jna</artifactId>
            <version>3.23.0</version>
        </dependency>

        <dependency>
            <groupId>io.bretty</groupId>
            <artifactId>console-table-builder</artifactId>
            <version>1.2</version>
        </dependency>

        <!--        https://www.mail-archive.com/commits@mina.apache.org/msg09428.html-->
        <!--        +* [ed25519-java](https://github.com/str4d/ed25519-java)-->
        <!--        +Required for supporting-->
        <!--        [ssh-ed25519](https://tools.ietf.org/html/draft-bjh21-ssh-ed25519-02) keys and-->
        <!--        [ed25519-sha-512](https://tools.ietf.org/html/draft-josefsson-eddsa-ed25519-02)-->
        <!--        signatures. **Note:** the required Maven module(s) are defined as `optional` so-->
        <!--        must be added as an **explicit** dependency in order to be included in the-->
        <!--        classpath:-->
        <dependency>
            <groupId>net.i2p.crypto</groupId>
            <artifactId>eddsa</artifactId>
            <version>0.3.0</version>
        </dependency>

    </dependencies>

</project>